Fix problem with pop up message alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,6 @@ button:hover {
 }
 
 #popup-message {
-    position: fixed;
     display: none;
     justify-content: center;
     align-items: center;
